--- a/src/index.html
+++ b/src/index.html
@@ -6,11 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/index.css">
+    <link rel="stylesheet" href="main.css">
     <title>WebXR</title>
 </head>
 
 <body>
-    <script src="./main/01-webxr.js"></script>
+    <script src="./main/02-webxr_vr_ballshooter.js"></script>
 </body>
 
 </html>
